--- a/src/styles/Class.css
+++ b/src/styles/Class.css
@@ -1,10 +1,10 @@
-.gradeCenter {
+.classCenter {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.gradeHeader {
+.classHeader {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     align-items: center;
@@ -16,7 +16,7 @@
     border-radius: 20px;
 }
 
-.gradeRow {
+.classRow {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     align-items: center;
@@ -29,6 +29,21 @@
     border-radius: 20px;
 }
 
-.gradeInfo {
+.classInfo {
     width: 80%;
+}
+
+.editButton {
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
 }
