--- a/src/styles/Grade.css
+++ b/src/styles/Grade.css
@@ -33,14 +33,14 @@
     width: 80%;
 }
 
-.gradeCenter input {
+.gradeInput {
     padding: 0.5rem;
     margin: 0px 5px;
     border-radius: 5px;
     border: 1px solid #ccc;
 }
 
-.gradeCenter button {
+.gradeButton {
     padding: 0.5rem 1rem;
     background-color: #4CAF50;
     color: white;
@@ -56,6 +56,27 @@
   border-top: 3px solid #ccc;
 }
 
+.gradeTitleContainer {
+    position:relative;
+    align-items: center;
+    width: 80%;
+    text-align:center;
+}
+
+.backButton {
+    position:absolute;
+    left:0;
+    top:50%;
+    transform: translateY(-50%);
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
 
 a {
     text-decoration: none;
