--- a/src/styles/EditClass.css
+++ b/src/styles/EditClass.css
@@ -72,3 +72,25 @@
 .deleteClassButton:hover {
     background-color: #cf3730;
 }
+
+.editClassTitleContainer {
+    position:relative;
+    align-items: center;
+    width: 80%;
+    text-align:center;
+}
+
+.backButton {
+    position:absolute;
+    left:0;
+    top:50%;
+    transform: translateY(-50%);
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
