--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,11 +1,12 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
+    Cantarell, "Open Sans", "Helvetica Neue", sans-serif, sans-serif;
 }
 
 .navbar {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
   padding: 20px 20px;
   display: flex;
   align-items: center;
@@ -14,9 +15,12 @@ body {
 .navbar-logo {
   margin-top: -7px;
   margin-bottom: -7px;
-  margin-right: 25px;
+  margin-right: 40px;
   height: 40px;
   width: auto;
+
+  transform: scale(1.5);
+  transform-origin: left center;
 }
 
 .navbar-links {
@@ -39,5 +43,5 @@ body {
 }
 
 .nav-item.active a {
-  background-color: #74C0FF;
+  background-color: #74c0ff;
 }
