--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -6,7 +6,7 @@ body {
 }
 
 .navbar {
-  background-color: #d9d9d9;
+  background-color: #34547c;
   padding: 20px 20px;
   display: flex;
   align-items: center;
@@ -33,13 +33,13 @@ body {
 
 .nav-item a {
   text-decoration: none;
-  color: #333;
+  color: #ffffff;
   padding: 8px 16px;
   border-radius: 25px;
 }
 
 .nav-item a:hover {
-  background-color: #e0e0e0;
+  background-color: #7a7a7a;
 }
 
 .nav-item.active a {
