Fixed some styling issues with a global css file

--- a/src/styles/Class.css
+++ b/src/styles/Class.css
@@ -10,7 +10,8 @@
     align-items: center;
     padding: 10px;
     max-width: 80%;
-    background-color: #D9D9D9;
+    background-color: #8A9CB3;
+    font-weight: bold;
     margin: 0 auto;
     gap: 10%;
     border-radius: 20px;
