--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -14,6 +14,7 @@
 
 .home-summary {
   margin-bottom: 2rem;
+  justify-content: center;
 }
 
 .home-card {
@@ -23,6 +24,7 @@
 
 .home-button-grid {
   margin-top: 3rem;
+  justify-content: center;
 }
 
 /*************************************************************************
@@ -38,13 +40,14 @@
 .upcoming-item {
   display: flex;
   align-items: center;
-  background-color: #f5f5f5;
+  background-color: #dc4038c0;
   padding: 1rem;
-  border-radius: 4px;
+  border-radius: 15px;
 }
 
 .upcoming-date {
-  background-color: #ddd;
+  background-color: #3c557c;
+  color: white;
   border-radius: 10px;
   padding: 0.5rem;
   text-align: center;
