--- a/src/styles/StudentDirectory.css
+++ b/src/styles/StudentDirectory.css
@@ -2,9 +2,6 @@
  * StudentDirectory.jsx styles
  * This section contains the CSS styles for the StudentDirectory route.
  *************************************************************************/
-.student-directory-container {
-  margin-top: 1.5rem;
-}
 .search-bar-container {
   margin: 0.5rem, 0;
 }
@@ -29,7 +26,7 @@
 
 /* Header styles */
 .student-table-header th {
-  background-color: #ddd;
+  background-color: #8a9cb3;
   font-weight: bold;
 }
 .student-table-header th:first-child {
@@ -52,7 +49,7 @@
   max-width: 450px;
 }
 .enrolled-classes-header {
-  background-color: #ddd;
+  background-color: #8a9cb3;
   font-weight: bold;
 }
 .enrolled-classes-header th {
