--- a/src/styles/ClassesDashboard.css
+++ b/src/styles/ClassesDashboard.css
@@ -1,69 +1,68 @@
 .classesCenter {
-    display:flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .classesHeader {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    align-items: center;
-    padding: 10px;
-    max-width: 80%;
-    background-color: #8A9CB3;
-    font-weight: bold;
-    margin: 0 auto;
-    gap: 20%;
-    border-radius: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  align-items: center;
+  padding: 10px;
+  max-width: 80%;
+  background-color: #8a9cb3;
+  font-weight: bold;
+  margin: 0 auto;
+  gap: 20%;
+  border-radius: 20px;
 }
 
 .classesRow {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    align-items: center;
-    padding: 10px;
-    max-width: 80%;
-    background-color: #F5F5F5;
-    margin: 0 auto;
-    gap: 20%;
-    margin-top: 10px;
-    border-radius: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  align-items: center;
+  padding: 10px;
+  max-width: 80%;
+  background-color: #f5f5f5;
+  margin: 0 auto;
+  gap: 20%;
+  margin-top: 10px;
+  border-radius: 20px;
 }
 
 .classesForm {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    width: 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: 300px;
 }
 
 .classesTextField {
-    padding: 0.5rem;
-    font-size: 1rem;
-    border-radius: 5px;
-    border: 1px solid #ccc;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
 }
 
 .classesSelect {
-    padding: 0.5rem;
-    font-size: 1rem;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 .classesButton {
-    padding: 0.5rem;
-    font-size: 1rem;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    cursor: pointer;
-    margin-bottom: 50px;
+  padding: 0.5rem;
+  font-size: 1rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: #3c557c;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin-bottom: 50px;
 }
-
