--- a/src/styles/Grade.css
+++ b/src/styles/Grade.css
@@ -1,53 +1,53 @@
 .gradeCenter {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .gradeHeader {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    padding: 10px;
-    max-width: 80%;
-    background-color: #8A9CB3;
-    font-weight: bold;
-    margin: 0 auto;
-    gap: 70%;
-    border-radius: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  padding: 10px;
+  max-width: 80%;
+  background-color: #8a9cb3;
+  font-weight: bold;
+  margin: 0 auto;
+  gap: 70%;
+  border-radius: 20px;
 }
 
 .gradeRow {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    padding: 10px;
-    max-width: 80%;
-    background-color: #F5F5F5;
-    margin: 0 auto;
-    gap: 70%;
-    margin-top: 10px;
-    border-radius: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  padding: 10px;
+  max-width: 80%;
+  background-color: #f5f5f5;
+  margin: 0 auto;
+  gap: 70%;
+  margin-top: 10px;
+  border-radius: 20px;
 }
 
 .gradeInfo {
-    width: 80%;
+  width: 80%;
 }
 
 .gradeInput {
-    padding: 0.5rem;
-    margin: 0px 5px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
+  padding: 0.5rem;
+  margin: 0px 5px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
 }
 
 .gradeButton {
-    padding: 0.5rem 1rem;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+  padding: 0.5rem 1rem;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 .gradeDivider {
@@ -58,27 +58,12 @@
 }
 
 .gradeTitleContainer {
-    position:relative;
-    align-items: center;
-    width: 80%;
-    text-align:center;
-}
-
-.backButton {
-    position:absolute;
-    left:0;
-    top:50%;
-    transform: translateY(-50%);
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    cursor: pointer;
+  position: relative;
+  align-items: center;
+  width: 80%;
+  text-align: center;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
